--- a/style.css
+++ b/style.css
@@ -50,3 +50,24 @@ playerPosition{
     display: flex;
     flex-direction: column;
 }
+.searchplayer{
+    background-color: #17408b;
+    color: white;
+    border-radius: 5px;
+    height: 4vh;
+}
+.divtable{
+    width: 64vw;
+    background-color: #f0f0f0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;    
+    background-color: #f0f0f0;
+}
+.row{
+    width: 55vw;
+    display: flex;
+    flex-direction: row;
+    justify-items: center;
+    /* background-color: #f0f0f0; */
+}
